Null OCL-id check and ocl-patient check in update patient interceptor